<resources>
    <string name="app_name">QuizMatematika</string>
    <string name="play">PLAY</string>
    <string name="view_score">VIEW SCORE</string>
    <string name="score">Score: 0</string>
    <string name="_0_0">0 + 0 =</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="erase">ERASE</string>
    <string name="submit">SUBMIT</string>
</resources>